# journal-starter

./: .coveragerc  .dockerignore  .env-sample  .env.example  .gitignore  Dockerfile  Makefile  README.md  STATE.md  TESTING.md  alembic.ini  codecov.yml  compose.yml  dev-requirements.txt  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run_tests.sh  start.sh
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  test.yml  trivy.yml
api/: __init__.py  alembic.ini  config.py  main.py  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 9d6867fb53a7_initial_migration.py
api/controllers/: journal_router.py
api/models/: entry.py  testy.py
api/repositories/: postgres_repository.py
api/routers/: journal_router.py
api/schemas/: __init__.py  schemas.py
api/services/: entry_service.py  llm_service.py
app/: main.py
app/core/: config.py
app/db/: session.py
app/models/: entry.py
app/routers/: journal_router.py
app/schemas/: entry.py
app/services/: entry_service.py
docs/: capstone-redesign-plan.md  implementation-plan.md
migrations/: env.py
migrations/versions/: 73f82b54943b_add_entry_table.py  9d02a3138fb2_initial_schema.py
rest_client/: api_calls.http
scripts/: verify_llm.py
tests/: conftest.py  test_api.py  test_entry_service.py  test_integration_api.py  test_journal_router.py  test_llm_service.py  test_logging.py  test_models.py  test_service.py
